--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,11 @@
     font-size: 17px;
 }
 
+h2 {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
 
 .role a {
     color: #336cf2;
